--- a/index.html
+++ b/index.html
@@ -5,24 +5,48 @@
   <!--  Meta  -->
   <meta charset="UTF-8" />
   <title>MOMENTUMA - The internet marketing guide</title>
-  
+
   <!--  Styles  -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="styles/index.processed.css">
+  <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
-  <div class="container-fluid header">
-  <img alt="MOMENTUMA LOGO" src="img/logo.svg">
-  <ul>
-    <li><a href="index.html">Home<a></li>
-    <li><a href="#">store</a></li>
-    <li><a href="#">about</a></li>
+  <div>
+  <div class="header">
+  <img class="logo" alt="MOMENTUMA LOGO" src="img/logo.svg">
+  <ul class="list">
+    <li class="li1"><a href="index.html">Home  <a></li>
+    <li class="li2"><a href="#">store  </a></li>
+    <li class="li3"><a href="#">about  </a></li>
   </ul>
-  <input type="text" placeholder="search" required>
-  <button class="btn" type="submit">search</button>
+  <span>
+  <input class="search-bar" type="text" placeholder="search" required>
+  <button class="btn search-btn" type="submit">search</button>
+ </span>
   </div>
+  <br>
+  <div>
+  <img class="smaller-image img-responsive second-header" src="img/lap-resize.png" alt="laptop picture">
+  </div>
+  <div class="store-blocks">
+    <span class="block1">
+      <img src="img/new-product1.png">
+      <button class="btn produc1-btn" type="submit">Add to cart</button>
+    </span>
+    <span class="block2">
+      <img src="img/new-product1.png">
+      <button class="btn product2-btn" type="submit">Add to cart</button>
+    </span>
+    <span class="block3">
+      <img src="img/new-product1.png">
+      <button class="btn product3-btn" type="submit">Add to cart</button>
+    </span>
+  </div>
+  <br>
   <div class="container-fluid">
+    <br>
+    <br>
   <p>
  Duis ultrices vitae sem sit amet tempor. Orci varius natoque penatibus et
  magnis dis parturient montes, nascetur ridiculus mus. Maecenas tempor, sem eu
@@ -34,8 +58,16 @@
  nec leo vehicula pulvinar. Phasellus ex enim, feugiat a maximus nec, hendrerit in
  libero. Curabitur porttitor velit ac massa accumsan consequat.
   </p>
-  
-  
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+    deserunt mollit anim id est laborum.
+  </p>
+  <br>
+  <br>
+  <footer>&copy;momentumo 2017</footer>
   </div>
 
   <!-- Scripts -->
@@ -43,5 +75,6 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
